// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationWidget.vue calls buttons 1`] = `
Object {
  "click": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "focusin": Array [
    Array [
      FocusEvent {
        "isTrusted": true,
      },
    ],
    Array [
      FocusEvent {
        "isTrusted": true,
      },
    ],
  ],
  "focusout": Array [
    Array [
      FocusEvent {
        "isTrusted": true,
      },
    ],
  ],
  "mousedown": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseenter": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mousemove": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseover": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "mouseup": Array [
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
    Array [
      MouseEvent {
        "isTrusted": false,
      },
    ],
  ],
  "next": Array [
    Array [],
  ],
  "pointerdown": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerenter": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointermove": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerover": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "pointerup": Array [
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
    Array [
      PointerEvent {
        "isTrusted": false,
      },
    ],
  ],
  "previous": Array [
    Array [],
  ],
}
`;

exports[`PaginationWidget.vue calls buttons 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "pagination-previous-button-clicked",
    ],
    Array [
      "pagination-next-button-clicked",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`PaginationWidget.vue renders nothing if no next or prev props provided 1`] = `
<div>
  <div
    class="pagination"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`PaginationWidget.vue renders pagination 1`] = `
<div>
  <div
    class="pagination"
  >
    <button
      class="medium rounded primary k-button"
      data-v-29036f3a=""
      type="button"
    >
      
      <!---->
      
      
       ‹ Previous 
      
      <!---->
    </button>
    <button
      class="medium rounded primary k-button"
      data-v-29036f3a=""
      type="button"
    >
      
      <!---->
      
      
       Next › 
      
      <!---->
    </button>
  </div>
</div>
`;
